# EXAI_agents

./: .env.example  .gitignore  README.md  app.py  interview_session.py  openrouter_presets.py  pyproject.toml  requirements.txt  reserch.txt  state_machine.py  system_prompt_builder.py
.streamlit/: secrets.toml.example
agents/: prompts.py  runner.py
content/: __init__.py  research_blocks.json  research_loader.py
docs/: agent_pipeline_and_system_prompt_builder_analogy.txt
tests/: test_interview_session.py  test_research.py  test_state_machine.py
